@@ -56,7 +56,14 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.14.1</version>
                 <configuration>
-                    <release>25</release>
+                    <source>26</source>
+                    <target>26</target>
+                    <compilerArgs>
+                        <arg>--enable-preview</arg>
+<!--                        <arg>&#45;&#45;add-exports=java.base/jdk.internal.vm.annotation=ALL-UNNAMED</arg>-->
+<!--                        <arg>&#45;&#45;add-exports=java.base/jdk.internal.value=ALL-UNNAMED</arg>-->
+<!--                        <arg>&#45;&#45;add-exports=java.base/jdk.internal.misc=ALL-UNNAMED</arg>-->
+                    </compilerArgs>
                     <annotationProcessorPaths>
                         <path>
                             <groupId>org.openjdk.jmh</groupId>
